--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # Banco de Dados
   db:
     image: postgres:15-alpine
     volumes:
@@ -11,7 +12,12 @@ services:
       - POSTGRES_DB=coreflowfit
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      retries: 5
 
+  # Backend
   backend:
     build:
       context: ./backend
@@ -21,10 +27,22 @@ services:
       - ./backend:/app/backend
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/coreflowfit
+      - ENVIRONMENT=development
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+
+  # Frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
 
 volumes:
   postgres_data:
