--- a/frontend/.github/workflows/ci.yml
+++ b/frontend/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     
-    steps:
+    steps:.
     - uses: actions/checkout@v3
 
     - name: Login to Docker Hub
