Finaliza Tarefa 3: Documentacao tecnica e docstrings

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-DATABASE_URL=postgresql://USER:PASS@HOST:PORT/DBNAME
-SECRET_KEY=change_me
+# backend/.env
+DATABASE_URL=postgresql://postgres:postgres@db:5432/coreflowfit
+ENVIRONMENT=development
