--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,24 +10,29 @@
     "test": "vitest"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.0.0",
-    "react-router-dom": "^7.0.0",
+    "axios": "^1.6.0",
     "lucide-react": "^0.258.0",
-    "recharts": "^2.5.0",
-    "zustand": "^4.4.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.1",
+    "react-router-dom": "^7.0.0",
+    "recharts": "^2.5.0",
+    "zod": "^4.1.13",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "tailwindcss": "^4.0.0",
-    "postcss": "^8.0.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@testing-library/react": "^14.0.0",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.0.0",
-    "vite": "^5.0.0",
-    "typescript": "^5.0.0",
     "eslint": "^8.0.0",
+    "postcss": "^8.0.0",
     "prettier": "^2.0.0",
-    "vitest": "^1.0.0",
-    "@testing-library/react": "^14.0.0"
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0"
   }
 }
