--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,35 +4,29 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
-    "test": "vitest"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.6.0",
-    "lucide-react": "^0.258.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
+    "axios": "^1.4.0",
+    "lucide-react": "^0.268.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.0.0",
     "react-router-dom": "^7.0.0",
-    "recharts": "^2.5.0",
-    "zod": "^4.1.13",
-    "zustand": "^4.4.0"
+    "recharts": "^2.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
-    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.0.0",
-    "eslint": "^8.0.0",
-    "postcss": "^8.0.0",
-    "prettier": "^2.0.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.0.0",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.5.0",
     "vite": "^5.0.0",
-    "vitest": "^1.0.0"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
